--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -11,7 +11,7 @@
   <div ng-show="$ctrl.uiOptions.isAdmin"
       class="row chr_leave-request-modal__user-info">
     <span class="col-xs-6">Lawrence Longnamesburg (81)</span>
-    <span class="col-xs-6">Awaiting Approval</span>
+    <span class="col-xs-6">{{$ctrl.uiOptions.statusLabel}}</span>
   </div>
 
   <div class="modal-body chr_leave-request-modal__form">
@@ -121,8 +121,8 @@
                             ng-options="option.label for option in $ctrl.leaveRequestToDayTypes track by option.name"
                             ng-model="$ctrl.uiOptions.selectedToType"
                             ng-change="$ctrl.calculateBalanceChange()">
-                      <option value="">Select</option>
-                    </select>
+                            <option value="">Select</option>
+                        </select>
                       </div>
                     </crm-loading>
                   </div>
@@ -196,18 +196,17 @@
         class="row chr_leave-request-modal__response">
       <div class="col-xs-12 form-horizontal">
         <div class="form-group">
-          <label class="col-xs-4 control-label">Response
+          <label class="col-xs-4 control-label">Set status to:
           <i class="fa fa-asterisk"></i>
         </label>
           <div class="col-xs-8">
             <div class="chr_custom-select chr_custom-select--full">
-              <select ng-model="$ctrl.leaveRequest.selectedResponse">
-              <option value="1">- select -</option>
-              <option value="2">Approve</option>
-              <option value="3">Reject</option>
-              <option value="4">More Information Required</option>
-              <option value="5">Cancel</option>
-            </select>
+              <select name="statusSelect"
+                  ng-options="option.label for option in $ctrl.leaveRequestStatuses track by option.value"
+                  ng-model="$ctrl.uiOptions.selectedStatus"
+                  ng-change="$ctrl.onStatusChanged()">
+                  <option value="">- select -</option>
+              </select>
             </div>
           </div>
         </div>
