--- a/contactaccessrights/views/access-rights-modal.html
+++ b/contactaccessrights/views/access-rights-modal.html
@@ -24,7 +24,7 @@
             Regions:
           </label>
           <div class="col-xs-12 col-sm-8">
-            <ui-select multiple on-select="selection" ng-required="true" theme="civihr-ui-select" ng-model="selectedData.regions">
+            <ui-select multiple on-select="modalCtrl.selection($item, $model)" ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.regions">
               <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="region.id as region in modalCtrl.availableData.regions | filter: $select.search">
                 <div ng-bind-html="region.name | highlight: $select.search"></div>
@@ -37,7 +37,7 @@
             Locations:
           </label>
           <div class="col-xs-12 col-sm-8">
-            <ui-select multiple on-select="selection" ng-required="true" theme="civihr-ui-select" ng-model="selectedData.locations">
+            <ui-select multiple on-select="modalCtrl.selection($item, $model)" ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.locations">
               <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="location.id as location in modalCtrl.availableData.locations | filter: $select.search">
                 <div ng-bind-html="location.name | highlight: $select.search"></div>
