--- a/com.civicrm.hrjobroles/views/mainTemplate.html
+++ b/com.civicrm.hrjobroles/views/mainTemplate.html
@@ -1,18 +1,17 @@
 <div class="alert {{jobroles.message_type}}" ng-show="jobroles.message">{{jobroles.message}}</div>
 
-<div class="crm-container" ng-hide="templateLoaded">
+<div class="crm-container" ng-hide="job_roles_loaded">
   <div class="blockUI blockOverlay spinner-height"></div>
 </div>
 
-<div class="" ng-show="templateLoaded">
-
+<div class="" ng-show="job_roles_loaded">
   <h3 ng-show="jobroles.present_job_roles.length > 0"
     class="header-bar header-bar-primary">Current Roles and Projects:</h3>
   <ul class="{{prefix}}list-role">
     <li class="{{prefix}}list-role-item"
-      ng-show="loaded"
       ng-repeat="job_roles_data in jobroles.present_job_roles"
-      ng-include="job_role_panel_url" onload="loaded()">
+      ng-include
+      src="job_role_panel_url">
     </li>
   </ul>
   <h3 ng-show="jobroles.past_job_roles.length > 0" class="header-bar header-bar-danger">Past Roles and Projects:</h3>
@@ -23,13 +22,12 @@
       src="job_role_panel_url">
     </li>
   </ul>
-
-  <div class="{{prefix}}list-role-item" ng-show="!!add_new">
-    <div ng-include src="add_new_role_url"></div>
-  </div>
-
-  <button class="btn btn-default btn-primary" ng-click="add_new_role()" ng-hide="add_new">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add new job role
-  </button>
-
 </div>
+
+<div class="{{prefix}}list-role-item" ng-show="!!add_new">
+  <div ng-include src="add_new_role_url"></div>
+</div>
+
+<button class="btn btn-default btn-primary" ng-click="add_new_role()" ng-hide="add_new">
+  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add new job role
+</button>
