--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
@@ -13,6 +13,7 @@
 @import 'advanced-search/advanced-search';
 @import 'vacancies/vacancies';
 @import 'administer/administer';
+@import 'search/search';
 
 body,
 %open-sans-font-family {
