--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -184,7 +184,7 @@ $control-height: 30px;
         }
 
         .select2-choices {
-          border: solid 1px #c2cfd8;
+          border: solid 1px $crm-darker-grayblue;
           border-radius: 2px;
           box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
           width: 100%;
