--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -311,3 +311,32 @@ label {
     }
   }
 }
+
+#{$demographics} {
+  .crm-age-range {
+    display: flex;
+
+    label {
+      display: block;
+    }
+  }
+
+  @media (max-width: $screen-sm-min) {
+    .crm-age-range {
+      flex-direction: column;
+    }
+
+    input:not([type='radio']):not([type='checkbox']),
+    .select2-container {
+      width: 100% !important;
+      flex: 1 auto;
+      margin-right: 0 !important;
+    }
+
+    tr:nth-child(4) {
+      td:last-child {
+        display: none;
+      }
+    }
+  }
+}
