--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -4,3 +4,4 @@ $display-settings-for-results: 'div.crm-search_criteria_basic-accordion:nth-chil
 $basic-criteria: 'div.crm-search_criteria_basic-accordion:nth-child(4) > div:nth-child(2)';
 $address-fields: '#location';
 $cases: '#case-search';
+$demographics: '#demographics';
