--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -5,3 +5,4 @@ $basic-criteria: 'div.crm-search_criteria_basic-accordion:nth-child(4) > div:nth
 $address-fields: '#location';
 $cases: '#case-search';
 $demographics: '#demographics';
+$notes: '#notes-search';
