AI-2: Add changelog selector

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -341,7 +341,8 @@ label {
   }
 }
 
-#{$notes} {
+#{$notes},
+#{$changelog} {
   @media (max-width: $screen-sm-min) {
     tr {
       display: flex;
