--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -6,3 +6,4 @@ $address-fields: '#location';
 $cases: '#case-search';
 $demographics: '#demographics';
 $notes: '#notes-search';
+$changelog: '#changelog';
