--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -7,3 +7,4 @@ $cases: '#case-search';
 $demographics: '#demographics';
 $notes: '#notes-search';
 $changelog: '#changelog';
+$mailings: '#mailingForm';
