--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -8,3 +8,5 @@ $demographics: '#demographics';
 $notes: '#notes-search';
 $changelog: '#changelog';
 $mailings: '#mailingForm';
+$events: '#participantForm';
+$membership: '#memberForm';
