--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -10,3 +10,4 @@ $changelog: '#changelog';
 $mailings: '#mailingForm';
 $events: '#participantForm';
 $membership: '#memberForm';
+$contributions: '#contribution_recur';
