AI-2: Adjust footer spacing

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_advanced-search.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_advanced-search.scss
@@ -56,4 +56,14 @@
       padding-right: 0;
     }
   }
+
+  .spacer {
+    display: none;
+  }
+
+  #{$footer} {
+    td {
+      padding-left: 20px;
+    }
+  }
 }
