--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -11,3 +11,4 @@ $mailings: '#mailingForm';
 $events: '#participantForm';
 $membership: '#memberForm';
 $contributions: '#contribution_recur';
+$footer: '.crm-search-form-block > .crm-advanced_search_form-accordion > .crm-accordion-body > .form-layout';
