--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_variables.scss
@@ -4,6 +4,8 @@ $display-settings-for-results: 'div.crm-search_criteria_basic-accordion:nth-chil
 $basic-criteria: 'div.crm-search_criteria_basic-accordion:nth-child(4) > div:nth-child(2)';
 $address-fields: '#location';
 $cases: '#case-search';
+$activities: '#activity';
+$relationship: '#relationship';
 $demographics: '#demographics';
 $notes: '#notes-search';
 $changelog: '#changelog';
@@ -11,4 +13,5 @@ $mailings: '#mailingForm';
 $events: '#participantForm';
 $membership: '#memberForm';
 $contributions: '#contribution_recur';
+$pledges: '#pledgeForm';
 $footer: '.crm-search-form-block > .crm-advanced_search_form-accordion > .crm-accordion-body > .form-layout';
