--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -430,7 +430,7 @@ input[type='checkbox'] + label {
     }
 
     .float-left + .float-left {
-      margin-left: 0;
+      margin-left: 0 !important;
     }
   }
 }
