AI-2: Fix label font weight

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
@@ -9,6 +9,11 @@
         text-align: left;
         font-size: 13px;
         color: #4d5663;
+
+        &,
+        > label {
+          font-weight: normal !important;
+        }
       }
     }
   }
