--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -6,7 +6,7 @@
         <div class="chr_custom-select">
           <select
             ng-options="types.title for types in ctrl.absenceTypes track by types.id"
-            ng-model="ctrl.filters.leaveRequestFilters.selectedAbsenceTypes"
+            ng-model="ctrl.filters.leaveRequest.selectedAbsenceTypes"
             ng-change="ctrl.refresh()">
             <option value="">Leave Type</option>
           </select>
@@ -14,7 +14,7 @@
         <div class="chr_custom-select">
           <select
             ng-options="period as ctrl.labelPeriod(period) for period in ctrl.absencePeriods track by period.id"
-            ng-model="ctrl.filters.leaveRequestFilters.selectedPeriod"
+            ng-model="ctrl.filters.leaveRequest.selectedPeriod"
             ng-change="ctrl.refresh()">
           </select>
         </div>
@@ -31,7 +31,7 @@
       <div>
 
         <ui-select ng-change="ctrl.refresh()"
-                   ng-model="ctrl.filters.leaveRequestFilters.selectedUsers">
+                   ng-model="ctrl.filters.leaveRequest.selectedUsers">
           <ui-select-match placeholder="Staff Member">
             <span ng-bind="$select.selected.display_name"></span>
           </ui-select-match>
@@ -39,7 +39,7 @@
             <span ng-bind="user.display_name"></span>
           </ui-select-choices>
         </ui-select>
-        <i ng-show="ctrl.filters.leaveRequestFilters.selectedUsers"
+        <i ng-show="ctrl.filters.leaveRequest.selectedUsers"
            ng-click="ctrl.clearStaffSelection()"
            class="fa fa-times-circle" aria-hidden="true"></i>
 
@@ -47,7 +47,7 @@
       <div class="chr_custom-select">
         <select
           ng-options="region.label for region in ctrl.regions track by region.id"
-          ng-model="ctrl.filters.contactFilters.region"
+          ng-model="ctrl.filters.contact.region"
           ng-change="ctrl.refresh(region)">
           <option value="">Region</option>
         </select>
@@ -55,14 +55,14 @@
       <div class="chr_custom-select">
         <select
           ng-options="department.label for department in ctrl.departments track by department.id"
-          ng-model="ctrl.filters.contactFilters.department"
+          ng-model="ctrl.filters.contact.department"
           ng-change="ctrl.refresh()">
           <option value="">Department</option>
         </select>
       </div>
       <div>
         <ui-select multiple ng-change="ctrl.refresh()"
-                   ng-model="ctrl.filters.contactFilters.level_type">
+                   ng-model="ctrl.filters.contact.level_type">
           <ui-select-match placeholder="Leave Type">
             <span ng-bind="$item.value"></span>
           </ui-select-match>
@@ -74,7 +74,7 @@
       <div class="chr_custom-select">
         <select
           ng-options="location.label for location in ctrl.locations track by location.id"
-          ng-model="ctrl.filters.contactFilters.location"
+          ng-model="ctrl.filters.contact.location"
           ng-change="ctrl.refresh()">
           <option value="">Locations</option>
         </select>
@@ -83,7 +83,7 @@
         <label>
           <input type="checkbox"
                  ng-change = "ctrl.refresh()"
-                 ng-model="ctrl.filters.leaveRequestFilters.pending_requests"> Show pending requests only
+                 ng-model="ctrl.filters.leaveRequest.pending_requests"> Show pending requests only
         </label>
       </div>
     </div>
@@ -94,7 +94,7 @@
           <li ng-repeat="status in ctrl.leaveRequestStatuses track by status.value"
               ng-hide="ctrl.filterLeaveRequestByStatus(status).length === 0"
               ng-click="ctrl.refreshWithFilter(status)"
-              ng-class="{'active': ctrl.filters.leaveRequestFilters.leaveStatus.name === status.name}">
+              ng-class="{'active': ctrl.filters.leaveRequest.leaveStatus.name === status.name}">
             <a href="#">
           <span class="active badge {{ctrl.getNavBadge(status.name)}} pull-right">
             {{ctrl.filterLeaveRequestByStatus(status).length}}
