--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
@@ -13,3 +13,4 @@
 @import 'pages/contact-report';
 @import 'pages/activity-details';
 @import 'pages/export-contact';
+@import 'pages/new-activity';
